--- a/src/Components/pages/checkout/checkout.styles.scss
+++ b/src/Components/pages/checkout/checkout.styles.scss
@@ -28,4 +28,11 @@
     margin-left: auto;
     font-size: 36px;
   }
+  .test-warning{
+    text-align: center;;
+    font-size: 20px;
+    margin-top: 2rem;
+    margin-bottom: 3rem;
+    color: red;
+  }
 }
