--- a/src/Components/checkout-item/checkout-item.styles.scss
+++ b/src/Components/checkout-item/checkout-item.styles.scss
@@ -6,20 +6,25 @@
   padding: 15px 0;
   font-size: 20px;
   align-items: center;
+  color: #fff;
 
   .image-container {
     width: 23%;
     padding-right: 15px;
+    
 
     img {
       width: 100%;
       height: 100%;
+      margin-left: 1rem;
+      border: white dotted 1px;
     }
   }
   .name,
   .quantity,
   .price {
     width: 23%;
+    margin-left: 1rem;
   }
 
   .quantity {
@@ -34,7 +39,7 @@
    margin: 0 10px;
  }
   .remove-button {
-    padding-left: 12px;
+    padding-right: 30px;
     cursor: pointer;
   }
 }
