--- a/src/Components/custome-button/custom-button.styles.scss
+++ b/src/Components/custome-button/custom-button.styles.scss
@@ -11,7 +11,7 @@
   text-transform: uppercase;
   font-family: 'Open Sans Condensed';
   font-weight: bolder;
-  border: none;
+  border: #fff solid 1px;
   cursor: pointer;
   display: flex;
   justify-content:center ;
@@ -19,7 +19,7 @@
   &:hover {
     background-color: white;
     color: black;
-    border: 1px solid black;
+    opacity: 0.9;
   }
 
   &.google-sign-in{
