--- a/src/Components/directory/directory.styles.scss
+++ b/src/Components/directory/directory.styles.scss
@@ -2,5 +2,7 @@
   width: 100%;
   display: flex;
   flex-wrap: wrap;
+  margin-top: 70px;
+  background-color: #fff;
   justify-content: space-between;
 }
