--- a/src/Components/form-input/form-input.styles.scss
+++ b/src/Components/form-input/form-input.styles.scss
@@ -12,8 +12,8 @@ $main-color: black;
   margin: 45px 0;    
 
   .form-input {
-    background: none;
-    background-color: white;
+    background:none;
+    background-color: grey;
     color: $sub-color;
     font-size: 18px;
     padding: 10px 10px 10px 5px;
@@ -45,6 +45,7 @@ $main-color: black;
     pointer-events: none;
     left: 5px;
     top: 10px;
+    color: white;
     transition: 300ms ease all;
 
     &.shrink {
