--- a/src/Components/menu-items/menu-items.styles.scss
+++ b/src/Components/menu-items/menu-items.styles.scss
@@ -1,13 +1,14 @@
 .menu-item {
-  min-width: 30%;
+  min-width: 20%;
   height: 240px;
   flex: 1 1 auto;
   display: flex;
   align-items: center;
   justify-content: center;
   border: 1px solid black;
-  margin: 0 7.5px 15px;
+  margin: 1.7rem 1.7rem 15px;
   overflow: hidden;
+  border: #000 solid 4px;
   
   &:hover{
     cursor: pointer;
@@ -19,20 +20,18 @@
 
     & .content{
       opacity: 0.9;
+      margin: 1.2rem;
     }
   }
 
 
-  &.large{
-    height: 350px;
-  }
-
   &:first-child {
-    margin-right: 7.5px;
+    margin-right: 1.5rem;
   }
 
   &:last-child {
-    margin-left: 7.5px;
+    margin-left: 1.5rem;
+    margin-bottom: 3rem;
   }
 
   .background-image{
