--- a/src/Components/sign-up/sign-up.styles.scss
+++ b/src/Components/sign-up/sign-up.styles.scss
@@ -2,6 +2,10 @@
     display: flex;
     flex-direction: column;
     width: 380px;
+    margin-bottom: 40px;
+    color: #fff;
+    margin-top: 9rem;
+    z-index: 5;
 
     .title{
         margin:10px 0;
