--- a/src/Components/form-input/form-input.styles.scss
+++ b/src/Components/form-input/form-input.styles.scss
@@ -1,10 +1,10 @@
-$sub-color: grey;
+$sub-color: white;
 $main-color: black;
 
 @mixin shrinkLabel {
   top: -14px;
   font-size: 12px;
-  color: $main-color;
+  color: $sub-color;
 }
 
 .group {
@@ -13,7 +13,6 @@ $main-color: black;
 
   .form-input {
     background:none;
-    background-color: grey;
     color: $sub-color;
     font-size: 18px;
     padding: 10px 10px 10px 5px;
@@ -35,6 +34,7 @@ $main-color: black;
 
   input[type='password'] {
     letter-spacing: 0.3em;
+    z-index: 9;
   }
 
   .form-input-label {
